@@ -11,7 +11,7 @@
 %
 %  configuration file for ECLiPSe 6.0#77 and later versions
 %
-%  last updated: April 1, 2010
+%  last updated: April 15, 2010
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -611,14 +611,24 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 '$lgt_rewrite_and_copy_pl_directive'(demon(PIs), demon(CPIs)) :-
 	'$lgt_tr_predicate_indicators'(PIs, CPIs).
 
+'$lgt_rewrite_and_copy_pl_directive'(export(chtab(Char, Class)), export(chtab(Char, Class))).
+'$lgt_rewrite_and_copy_pl_directive'(export(domain(Domain)), export(domain(Domain))).
+'$lgt_rewrite_and_copy_pl_directive'(export(struct(Struct)), export(struct(Struct))).
+'$lgt_rewrite_and_copy_pl_directive'(export(syntax_option(SyntaxOption)), export(syntax_option(SyntaxOption))).
+
 '$lgt_rewrite_and_copy_pl_directive'(inline(PI1, PI2), inline(CPI1, CPI2)) :-
 	'$lgt_tr_predicate_indicators'(PI1, CPI1),
 	'$lgt_tr_predicate_indicators'(PI2, CPI2).
 
 '$lgt_rewrite_and_copy_pl_directive'(pragma(Pragma), pragma(Pragma)).
 
+'$lgt_rewrite_and_copy_pl_directive'(set_event_handler(Event, Handler), set_event_handler(Event, Handler)).
+
 '$lgt_rewrite_and_copy_pl_directive'(set_flag(PI, Flag, Value), set_flag(CPI, Flag, Value)) :-
 	'$lgt_tr_predicate_indicators'(PI, CPI).
+
+'$lgt_rewrite_and_copy_pl_directive'(skipped(PIs), skipped(CPIs)) :-
+	'$lgt_tr_predicate_indicators'(PIs, CPIs).
 
 
 % '$lgt_rewrite_and_recompile_pl_directive'(@callable, -callable)
@@ -627,6 +637,7 @@ call(F, A1, A2, A3, A4, A5, A6, A7, A8) :-
 	'$lgt_flatten_list'([Conjunction], Imports).
 
 '$lgt_rewrite_and_recompile_pl_directive'(local(Functor/Arity), private(Functor/Arity)).
+'$lgt_rewrite_and_recompile_pl_directive'(local(op(Priority, Spec, Operators)), op(Priority, Spec, Operators)).
 
 '$lgt_rewrite_and_recompile_pl_directive'(lib(Library), use_module(library(Library), Exports)) :-
 	'$lgt_eclipse_list_of_exports'(library(Library), Exports).
