@@ -73,6 +73,8 @@ RELEASE NOTES
 
     Moved the "eclipse6.pl" config file to the "configs/unsupported" folder
     as Logtalk only supports ECLiPSe using the "eclipse6iso.pl" config file.
+    Updated the "eclipse6iso.pl" config file with partial parsing solutions
+    for some proprietary ECLiPSe directives.
 
     Updated the Qu-Prolog integration script, "qplgt.sh", in order to use
     larger memory values for the code and environment areas.
